--- a/newcomer-guide.html
+++ b/newcomer-guide.html
@@ -2,127 +2,109 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Newcomer’s Guide to Healthcare, Privacy, and Jobs</title>
+  <title>Newcomer’s Guide</title>
   <style>
     body {
-      font-family: 'Georgia', serif;
-      background-color: #f0f6fb;
+      background-color: #f4f9fc;
+      font-family: Georgia, serif;
       color: #1a2e3b;
       line-height: 1.6;
       padding: 2rem;
-      max-width: 900px;
+      max-width: 800px;
       margin: auto;
     }
 
-    h1, h2 {
-      color: #002145;
-    }
-
     h1 {
-      text-align: center;
+      color: #002145;
       font-size: 2rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     h2 {
+      margin-top: 2rem;
       font-size: 1.4rem;
-      margin-top: 2rem;
+      color: #1a2e3b;
     }
 
-    ul {
-      padding-left: 1.2rem;
-    }
-
-    .resources {
-      margin-top: 2rem;
-      background-color: #ffffff;
-      border-left: 5px solid #4a6e8c;
+    details {
+      background: #ffffff;
+      border-radius: 8px;
       padding: 1rem 1.2rem;
-      border-radius: 6px;
+      margin-top: 1rem;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
+    }
+
+    summary {
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 1.1rem;
+      color: #003366;
     }
 
     a {
-      color: #2a5c88;
+      color: #005999;
       text-decoration: none;
     }
 
     a:hover {
       text-decoration: underline;
     }
+
+    ul {
+      margin-left: 1.2rem;
+    }
   </style>
 </head>
-
 <body>
-  <h1>Newcomer’s Guide to Healthcare, Privacy, and Jobs in Canada</h1>
 
-  <h2>The Problem with Language Barriers</h2>
-  <p>People who don’t speak English or French well may get worse healthcare. When doctors and patients can’t understand each other, it can lead to mistakes. For example, a patient’s private health details might be shared with the wrong person, or a patient might agree to a treatment they don’t fully understand.</p>
+  <h1>Newcomer’s Guide to Healthcare, Privacy & Jobs</h1>
 
-  <h2>1. Healthcare: Why Language Matters</h2>
-  <strong>What’s Important:</strong>
-  <ul>
-    <li>Doctors may misunderstand your symptoms or give incorrect treatment.</li>
-    <li>You might sign forms without understanding what they mean.</li>
-  </ul>
-  <strong>What to Do:</strong>
-  <ul>
-    <li>Ask for a professional interpreter at hospitals or clinics (it’s your right!).</li>
-    <li>Learn key health words in English/French (e.g., “pain,” “allergy”).</li>
-    <li>Use free language classes like LINC/CLIC (see resources below).</li>
-  </ul>
+  <p>If English or French isn't your first language, navigating services like healthcare or job applications can be confusing. Here's how to stay safe and informed.</p>
 
-  <h2>2. Privacy Policies: Don’t Get Tricked</h2>
-  <strong>What’s Important:</strong>
-  <ul>
-    <li>Privacy rules are often in English or French and can be confusing.</li>
-    <li>You might share private info without meaning to.</li>
-  </ul>
-  <strong>What to Do:</strong>
-  <ul>
-    <li>Ask someone you trust to translate privacy forms.</li>
-    <li>Before signing, check:
-      <ul>
-        <li>What data is collected? (e.g., name, birthdate)</li>
-        <li>Who gets your data? (e.g., banks, advertisers)</li>
-        <li>What are the risks? (e.g., identity theft)</li>
-      </ul>
-    </li>
-  </ul>
-
-  <h2>3. Jobs: Why Language Skills Are Key</h2>
-  <strong>What’s Important:</strong>
-  <ul>
-    <li>Most jobs require English or French.</li>
-    <li>Without language skills, you may miss out even if you're highly qualified.</li>
-  </ul>
-  <strong>What to Do:</strong>
-  <ul>
-    <li>Take free LINC (English) or CLIC (French) classes.</li>
-    <li>Practice job-related words (e.g., “customer service”).</li>
-    <li>Join workshops at newcomer centers to improve résumé/interview skills.</li>
-  </ul>
-
-  <h2>4. Free Language Classes: Your Path to Success</h2>
-  <strong>What’s Important:</strong>
-  <ul>
-    <li>Understanding English/French helps with jobs, doctors, and digital safety.</li>
-  </ul>
-  <strong>What to Do:</strong>
-  <ul>
-    <li>If you're a permanent resident or protected person, you qualify for free classes.</li>
-    <li>Search for LINC/CLIC courses near you on the Canada.ca site.</li>
-    <li>Contact local orgs like YMCA for enrollment support.</li>
-  </ul>
-
-  <div class="resources">
-    <h2>Suggested Resources</h2>
+  <details>
+    <summary>1. Healthcare: Why Language Matters</summary>
+    <p><strong>Problem:</strong> Doctors may misinterpret symptoms. You might sign consent forms you don’t understand.</p>
     <ul>
-      <li><a href="https://www.canada.ca/en/health-canada/services/health-care-system/reports-publications/health-care-accessibility/language-barriers.html" target="_blank">Language Barriers in Access to Health Care</a></li>
-      <li><a href="https://www.priv.gc.ca/en/privacy-topics/collecting-personal-information/consent/gl_omc_201805/" target="_blank">Guidelines for obtaining meaningful consent</a></li>
-      <li><a href="https://www.ymcagta.org/immigrant-services" target="_blank">Free Help For Newcomers – YMCA</a></li>
-      <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Language Classes Funded by the Government of Canada</a></li>
+      <li>Ask for a professional interpreter at clinics (it's your right).</li>
+      <li>Learn key health words: "allergy", "pain", etc.</li>
+      <li>Use free government language classes (LINC/CLIC).</li>
     </ul>
-  </div>
+  </details>
+
+  <details>
+    <summary>2. Privacy Policies: Don’t Get Tricked</summary>
+    <p><strong>Problem:</strong> Privacy forms are often in English/French. You might share personal info without realizing it.</p>
+    <ul>
+      <li>Ask someone you trust to help read forms.</li>
+      <li>Check what data is collected, who gets it, and how long it’s kept.</li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>3. Jobs: Why Language Skills Matter</summary>
+    <p><strong>Fact:</strong> Most Canadian jobs need English or French, even if you're highly skilled.</p>
+    <ul>
+      <li>Take free LINC/CLIC classes for language training.</li>
+      <li>Learn job-specific words: “customer service”, “safety training”.</li>
+      <li>Join newcomer workshops for résumé and interview prep.</li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>4. Free Language Classes</summary>
+    <p>Learning a language helps with health, jobs, and avoiding scams.</p>
+    <ul>
+      <li>Free for permanent residents and protected persons.</li>
+      <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Find LINC/CLIC classes</a></li>
+      <li><a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA Newcomer Services</a></li>
+    </ul>
+  </details>
+
+  <h2>Further Reading</h2>
+  <ul>
+    <li><a href="https://www.canada.ca/en/health-canada/services/health-care-system/reports-publications/health-care-accessibility/language-barriers.html" target="_blank">Language Barriers in Access to Health Care</a></li>
+    <li><a href="https://www.priv.gc.ca/en/privacy-topics/collecting-personal-information/consent/gl_omc_201805/" target="_blank">Consent & Privacy Simplified</a></li>
+  </ul>
+
 </body>
 </html>
