--- a/newcomer-guide.html
+++ b/newcomer-guide.html
@@ -2,109 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Newcomer’s Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Newcomer’s Guide to Healthcare & Jobs</title>
   <style>
     body {
-      background-color: #f4f9fc;
-      font-family: Georgia, serif;
+      font-family: 'Georgia', serif;
+      background-color: #f5fafd;
+      margin: 0;
+      padding: 2rem;
       color: #1a2e3b;
       line-height: 1.6;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
     }
 
     h1 {
+      font-size: 2.2rem;
       color: #002145;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    h2 {
-      margin-top: 2rem;
-      font-size: 1.4rem;
-      color: #1a2e3b;
+      margin-bottom: 1.5rem;
     }
 
     details {
-      background: #ffffff;
-      border-radius: 8px;
-      padding: 1rem 1.2rem;
-      margin-top: 1rem;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      padding: 1rem 1.5rem;
+      margin-bottom: 1rem;
     }
 
     summary {
       font-weight: bold;
+      font-size: 1.2rem;
       cursor: pointer;
-      font-size: 1.1rem;
-      color: #003366;
-    }
-
-    a {
-      color: #005999;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
+      outline: none;
+      margin-bottom: 0.5rem;
     }
 
     ul {
-      margin-left: 1.2rem;
+      padding-left: 1.5rem;
+    }
+
+    a {
+      color: #004d80;
+    }
+
+    @media (max-width: 768px) {
+      body {
+        padding: 1rem;
+      }
     }
   </style>
 </head>
 <body>
 
-  <h1>Newcomer’s Guide to Healthcare, Privacy & Jobs</h1>
+  <h1>Newcomer’s Guide to Healthcare & Jobs</h1>
 
-  <p>If English or French isn't your first language, navigating services like healthcare or job applications can be confusing. Here's how to stay safe and informed.</p>
-
-  <details>
+  <details open>
     <summary>1. Healthcare: Why Language Matters</summary>
-    <p><strong>Problem:</strong> Doctors may misinterpret symptoms. You might sign consent forms you don’t understand.</p>
+    <p><strong>What’s Important:</strong> If you don’t speak English or French well, it can be hard to get good healthcare. Doctors and nurses might misunderstand your symptoms, or you might sign forms without knowing what they mean. This could lead to wrong treatments or sharing your private health details with others by accident.</p>
+    <p><strong>What to Do:</strong></p>
     <ul>
-      <li>Ask for a professional interpreter at clinics (it's your right).</li>
-      <li>Learn key health words: "allergy", "pain", etc.</li>
-      <li>Use free government language classes (LINC/CLIC).</li>
+      <li>Ask for a professional interpreter at hospitals or clinics (it’s your right!).</li>
+      <li>Learn key health words in English/French (e.g., “pain,” “allergy”).</li>
+      <li>Use free language classes like LINC/CLIC (see resources below).</li>
     </ul>
   </details>
 
   <details>
     <summary>2. Privacy Policies: Don’t Get Tricked</summary>
-    <p><strong>Problem:</strong> Privacy forms are often in English/French. You might share personal info without realizing it.</p>
+    <p><strong>What’s Important:</strong> Privacy policies (rules about how companies use your data) are often in English or French. If you sign them without understanding, you might unknowingly share your address, phone number, or financial details with strangers.</p>
+    <p><strong>What to Do:</strong></p>
     <ul>
-      <li>Ask someone you trust to help read forms.</li>
-      <li>Check what data is collected, who gets it, and how long it’s kept.</li>
+      <li>Always ask someone you trust to translate privacy forms.</li>
+      <li>Look for key details before signing:
+        <ul>
+          <li>What data is collected? (e.g., your name, birthdate)</li>
+          <li>Who gets your data? (e.g., banks, advertisers)</li>
+          <li>What are the risks? (e.g., identity theft)</li>
+        </ul>
+      </li>
     </ul>
   </details>
 
   <details>
-    <summary>3. Jobs: Why Language Skills Matter</summary>
-    <p><strong>Fact:</strong> Most Canadian jobs need English or French, even if you're highly skilled.</p>
+    <summary>3. Jobs: Why Language Skills Are Key</summary>
+    <p><strong>What’s Important:</strong> Most jobs in Canada require English or French. Without these skills, you might miss job opportunities, even if you’re highly skilled in your field.</p>
+    <p><strong>What to Do:</strong></p>
     <ul>
-      <li>Take free LINC/CLIC classes for language training.</li>
-      <li>Learn job-specific words: “customer service”, “safety training”.</li>
-      <li>Join newcomer workshops for résumé and interview prep.</li>
+      <li>Take free government language classes (LINC for English, CLIC for French).</li>
+      <li>Practice job-specific terms (e.g., “customer service,” “safety training”).</li>
+      <li>Attend workshops at newcomer centers to build résumé and interview skills.</li>
     </ul>
   </details>
 
   <details>
-    <summary>4. Free Language Classes</summary>
-    <p>Learning a language helps with health, jobs, and avoiding scams.</p>
+    <summary>4. Free Language Classes: Your Path to Success</summary>
+    <p><strong>What’s Important:</strong> Learning English or French helps you:
+      <ul>
+        <li>Understand doctors, teachers, and employers.</li>
+        <li>Avoid scams and protect your privacy.</li>
+        <li>Find better jobs and connect with your community.</li>
+      </ul>
+    </p>
+    <p><strong>What to Do:</strong></p>
     <ul>
-      <li>Free for permanent residents and protected persons.</li>
-      <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Find LINC/CLIC classes</a></li>
-      <li><a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA Newcomer Services</a></li>
+      <li>If you’re a permanent resident or protected person, you qualify for free classes.</li>
+      <li>Search for LINC/CLIC courses near you: <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Canada.ca Language Classes</a>.</li>
+      <li>Contact local organizations like the <a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA Newcomer Services</a> for help enrolling.</li>
     </ul>
   </details>
 
-  <h2>Further Reading</h2>
-  <ul>
-    <li><a href="https://www.canada.ca/en/health-canada/services/health-care-system/reports-publications/health-care-accessibility/language-barriers.html" target="_blank">Language Barriers in Access to Health Care</a></li>
-    <li><a href="https://www.priv.gc.ca/en/privacy-topics/collecting-personal-information/consent/gl_omc_201805/" target="_blank">Consent & Privacy Simplified</a></li>
-  </ul>
+  <details>
+    <summary>📚 Suggested Resources</summary>
+    <ul>
+      <li><a href="https://www.canada.ca/en/health-canada/services/health-care-system/reports-publications/health-care-accessibility/language-barriers.html" target="_blank">Language Barriers in Access to Health Care</a></li>
+      <li><a href="https://www.priv.gc.ca/en/privacy-topics/collecting-personal-information/consent/gl_omc_201805/" target="_blank">Guidelines for Obtaining Meaningful Consent</a></li>
+      <li><a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA – Free Help for Newcomers</a></li>
+      <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Canada Language Training (LINC/CLIC)</a></li>
+    </ul>
+  </details>
 
 </body>
 </html>
