--- a/newcomer-guide.html
+++ b/newcomer-guide.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Newcomer’s Guide to Healthcare & Jobs</title>
+  <title>A Newcomer’s Guide to Healthcare, Privacy, and Jobs in Canada</title>
   <style>
     body {
       font-family: 'Georgia', serif;
@@ -22,8 +22,13 @@
     h1 {
       font-size: 2.2rem;
       color: #002145;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
       text-align: center;
+    }
+
+    .intro {
+      font-size: 1.05rem;
+      margin-bottom: 2rem;
     }
 
     details {
@@ -39,7 +44,6 @@
       font-size: 1.1rem;
       cursor: pointer;
       outline: none;
-      margin-bottom: 0.5rem;
     }
 
     ul {
@@ -65,11 +69,16 @@
 <body>
 
   <div class="container">
-    <h1>Newcomer’s Guide to Healthcare & Jobs</h1>
+    <h1>A Newcomer’s Guide to Healthcare, Privacy, and Jobs in Canada</h1>
+
+    <p class="intro">
+      <strong>The Problem with Language Barriers</strong><br>
+      People who don’t speak English or French well may get worse healthcare. When doctors and patients can’t understand each other, it can lead to mistakes. For example, a patient’s private health details might be shared with the wrong person, or a patient might agree to a treatment they don’t fully understand.
+    </p>
 
     <details open>
       <summary>1. Healthcare: Why Language Matters</summary>
-      <p><strong>What’s Important:</strong> If you don’t speak English or French well, it can be hard to get good healthcare. Doctors and nurses might misunderstand your symptoms, or you might sign forms without knowing what they mean. This could lead to wrong treatments or sharing your private health details with others by accident.</p>
+      <p><strong>What’s Important:</strong> If you don’t speak English or French well, it can be hard to get good healthcare. Doctors and nurses might misunderstand your symptoms, or you might sign forms without knowing what they mean.</p>
       <p><strong>What to Do:</strong></p>
       <ul>
         <li>Ask for a professional interpreter at hospitals or clinics (it’s your right!).</li>
@@ -80,15 +89,15 @@
 
     <details>
       <summary>2. Privacy Policies: Don’t Get Tricked</summary>
-      <p><strong>What’s Important:</strong> Privacy policies (rules about how companies use your data) are often in English or French. If you sign them without understanding, you might unknowingly share your address, phone number, or financial details with strangers.</p>
+      <p><strong>What’s Important:</strong> Privacy policies are often in English or French. If you sign them without understanding, you might unknowingly share your address, phone number, or financial info with strangers.</p>
       <p><strong>What to Do:</strong></p>
       <ul>
-        <li>Always ask someone you trust to translate privacy forms.</li>
-        <li>Look for key details before signing:
+        <li>Ask someone you trust to translate privacy forms.</li>
+        <li>Look for these details:
           <ul>
-            <li>What data is collected? (e.g., your name, birthdate)</li>
-            <li>Who gets your data? (e.g., banks, advertisers)</li>
-            <li>What are the risks? (e.g., identity theft)</li>
+            <li>What data is collected?</li>
+            <li>Who will receive your data?</li>
+            <li>What are the risks (e.g., identity theft)?</li>
           </ul>
         </li>
       </ul>
@@ -96,42 +105,34 @@
 
     <details>
       <summary>3. Jobs: Why Language Skills Are Key</summary>
-      <p><strong>What’s Important:</strong> Most jobs in Canada require English or French. Without these skills, you might miss job opportunities, even if you’re highly skilled in your field.</p>
+      <p><strong>What’s Important:</strong> Most jobs in Canada require English or French. Without these skills, you might miss good job opportunities.</p>
       <p><strong>What to Do:</strong></p>
       <ul>
         <li>Take free government language classes (LINC for English, CLIC for French).</li>
-        <li>Practice job-specific terms (e.g., “customer service,” “safety training”).</li>
-        <li>Attend workshops at newcomer centers to build résumé and interview skills.</li>
+        <li>Learn job-specific vocabulary (e.g., “safety training”).</li>
+        <li>Join newcomer workshops to improve your résumé and interviews.</li>
       </ul>
     </details>
 
     <details>
       <summary>4. Free Language Classes: Your Path to Success</summary>
-      <p><strong>What’s Important:</strong> Learning English or French helps you:</p>
-      <ul>
-        <li>Understand doctors, teachers, and employers.</li>
-        <li>Avoid scams and protect your privacy.</li>
-        <li>Find better jobs and connect with your community.</li>
-      </ul>
+      <p><strong>What’s Important:</strong> Learning English or French helps you get better healthcare, avoid scams, and find better jobs.</p>
       <p><strong>What to Do:</strong></p>
       <ul>
         <li>If you’re a permanent resident or protected person, you qualify for free classes.</li>
-        <li>Search for LINC/CLIC courses near you: <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Canada.ca Language Classes</a>.</li>
-        <li>Contact local organizations like the <a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA Newcomer Services</a> for help enrolling.</li>
+        <li>Search for LINC/CLIC courses near you on Canada.ca.</li>
+        <li>Contact local settlement organizations like the YMCA for support.</li>
       </ul>
     </details>
 
-    <details>
-      <summary>Suggested Resources</summary>
-      <ul>
-        <li><a href="https://www.canada.ca/en/health-canada/services/health-care-system/reports-publications/health-care-accessibility/language-barriers.html" target="_blank">Language Barriers in Access to Health Care</a></li>
-        <li><a href="https://www.priv.gc.ca/en/privacy-topics/collecting-personal-information/consent/gl_omc_201805/" target="_blank">Guidelines for Obtaining Meaningful Consent</a></li>
-        <li><a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA – Free Help for Newcomers</a></li>
-        <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Canada Language Training (LINC/CLIC)</a></li>
-      </ul>
-    </details>
+    <h3 style="margin-top: 2rem;">Suggested Resources</h3>
+    <ul>
+      <li><a href="https://www.canada.ca/en/health-canada/services/health-care-system/reports-publications/health-care-accessibility/language-barriers.html" target="_blank">Language Barriers in Access to Health Care</a></li>
+      <li><a href="https://www.priv.gc.ca/en/privacy-topics/collecting-personal-information/consent/gl_omc_201805/" target="_blank">Guidelines for Obtaining Meaningful Consent</a></li>
+      <li><a href="https://www.ymcagta.org/immigrant-services" target="_blank">YMCA Newcomer Services</a></li>
+      <li><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/language-skills/classes.html" target="_blank">Government Language Classes (LINC/CLIC)</a></li>
+    </ul>
 
   </div>
-
 </body>
 </html>
