--- a/protecting-yourself-from-scams.html
+++ b/protecting-yourself-from-scams.html
@@ -14,58 +14,64 @@
     }
 
     .container {
-      max-width: 850px;
+      max-width: 800px;
       margin: 3rem auto;
       padding: 0 1.5rem;
     }
 
-    h1, h2 {
-      color: #002145;
-    }
-
     h1 {
+      text-align: center;
       font-size: 2.2rem;
-      margin-bottom: 1.2rem;
+      color: #002145;
+      margin-bottom: 2rem;
     }
 
     h2 {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       margin-top: 2rem;
+      margin-bottom: 1rem;
+      color: #002145;
       border-left: 4px solid #002145;
       padding-left: 10px;
-    }
-
-    ul, ol {
-      padding-left: 1.3rem;
     }
 
     .box {
       background-color: #ffffff;
       padding: 1.2rem 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      margin-top: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+      margin-bottom: 2rem;
+    }
+
+    ul, ol {
+      padding-left: 1.2rem;
+      margin-top: 0.5rem;
+    }
+
+    li {
+      margin-bottom: 0.4rem;
+    }
+
+    .resources {
+      margin-top: 2rem;
+      padding: 1.2rem 1.5rem;
+      background-color: #e0edf5;
+      border-radius: 10px;
+    }
+
+    .resources h2 {
+      margin-bottom: 1rem;
+      font-size: 1.15rem;
     }
 
     .resources a {
-      color: #002145;
+      color: #1a2e3b;
       text-decoration: none;
       font-weight: bold;
     }
 
     .resources a:hover {
       text-decoration: underline;
-    }
-
-    .resources {
-      margin-top: 2.5rem;
-      padding: 1.2rem 1.5rem;
-      background-color: #e0edf5;
-      border-radius: 10px;
-    }
-
-    li {
-      margin-bottom: 0.5rem;
     }
   </style>
 </head>
@@ -87,10 +93,10 @@
       <h2>Common Scams Targeting Newcomers</h2>
       <ul>
         <li><strong>Fake Job Postings:</strong> Require fees or personal info like your SIN.</li>
-        <li><strong>Phishing Attempts:</strong> Messages pretending to be from banks or IRCC (e.g., “Your SIN is suspended!”).</li>
-        <li><strong>Impersonating Officials:</strong> Fake CRA or police calls demanding payment or personal details.</li>
+        <li><strong>Phishing Attempts:</strong> Messages pretending to be from banks or IRCC.</li>
+        <li><strong>Impersonating Officials:</strong> Fake CRA or police calls demanding payment.</li>
         <li><strong>Immigration Scams:</strong> Promises of faster PR or jobs for money.</li>
-        <li><strong>Social Media Scams:</strong> Fake accounts selling goods or offering romance to steal info or money.</li>
+        <li><strong>Social Media Scams:</strong> Fake accounts stealing info or money.</li>
       </ul>
     </div>
 
@@ -99,22 +105,22 @@
       <ul>
         <li><strong>Limit Exposure:</strong>
           <ul>
-            <li>Carry only essential ID (driver’s license, health card).</li>
+            <li>Carry only essential ID.</li>
             <li>Shred documents with personal info.</li>
-            <li>Avoid sharing sensitive info on social media.</li>
+            <li>Be cautious with sensitive info online.</li>
           </ul>
         </li>
         <li><strong>Enhance Security:</strong>
           <ul>
-            <li>Use strong passwords (e.g., Toronto2024!).</li>
+            <li>Use strong passwords.</li>
             <li>Lock your mailbox.</li>
             <li>Keep your devices updated.</li>
           </ul>
         </li>
         <li><strong>Stay Vigilant:</strong>
           <ul>
-            <li>Review your bank statements.</li>
-            <li>Get a free credit report from Equifax or TransUnion.</li>
+            <li>Check your bank statements.</li>
+            <li>Request free credit reports.</li>
             <li>Delete suspicious messages.</li>
           </ul>
         </li>
@@ -133,9 +139,8 @@
     <div class="box">
       <h2>How to Report Scams</h2>
       <ul>
-        <li>Contact the <strong>Canadian Anti-Fraud Centre (CAFC):</strong> Call 1-888-495-8501 or <a href="https://antifraudcentre-centreantifraude.ca/index-eng.htm" target="_blank">report online</a>.</li>
-        <li>Contact your bank if money was stolen.</li>
-        <li>Report immigration scams to IRCC.</li>
+        <li>Contact <strong>Canadian Anti-Fraud Centre (CAFC):</strong> 1-888-495-8501 or <a href="https://antifraudcentre-centreantifraude.ca/index-eng.htm" target="_blank">report online</a>.</li>
+        <li>Report to your bank and immigration office (IRCC).</li>
       </ul>
     </div>
 
@@ -143,34 +148,19 @@
       <h2>Suggested Resources</h2>
       <ul>
         <li>
-          <a href="https://doi.org/10.1093/ijlit/eaw007" target="_blank">
-            Edwards & Urquhart (2016) – Privacy in Public Spaces
-          </a><br/>
-          Explores OSINT/SOCMINT and law enforcement use of online data.
+          <a href="https://doi.org/10.1093/ijlit/eaw007" target="_blank">Edwards & Urquhart (2016)</a> – How online privacy relates to policing.
         </li>
         <li>
-          <a href="https://www.newcanadianmedia.ca/new-to-canada-beware-youre-twice-as-likely-to-become-a-fraud-victim-survey-reveals/" target="_blank">
-            New Canadian Media – Fraud Risk for Newcomers
-          </a><br/>
-          Highlights most reported scams and victim statistics.
+          <a href="https://www.newcanadianmedia.ca/new-to-canada-beware-youre-twice-as-likely-to-become-a-fraud-victim-survey-reveals/" target="_blank">New Canadian Media: Fraud Risk for Newcomers</a>
         </li>
         <li>
-          <a href="https://crtc.gc.ca/eng/internet/pub/20240930.htm" target="_blank">
-            Canada Anti-Spam Legislation (CASL)
-          </a><br/>
-          Learn about five types of spam and scam tactics.
+          <a href="https://crtc.gc.ca/eng/internet/pub/20240930.htm" target="_blank">CASL: Spam & Scam Types</a>
         </li>
         <li>
-          <a href="https://antifraudcentre-centreantifraude.ca/index-eng.htm" target="_blank">
-            Canadian Anti-Fraud Centre
-          </a><br/>
-          Tracks fraud cases and collects reports.
+          <a href="https://antifraudcentre-centreantifraude.ca/index-eng.htm" target="_blank">Canadian Anti-Fraud Centre</a>
         </li>
         <li>
-          <a href="https://www.ipc.on.ca/en/privacy-individuals/ensuring-your-privacy-is-protected" target="_blank">
-            Ontario IPC: Ensuring Your Privacy
-          </a><br/>
-          Learn how to protect your data and avoid digital risks.
+          <a href="https://www.ipc.on.ca/en/privacy-individuals/ensuring-your-privacy-is-protected" target="_blank">Ontario IPC: Protect Your Privacy</a>
         </li>
       </ul>
     </div>
