--- a/how-police-use-data.html
+++ b/how-police-use-data.html
@@ -14,58 +14,57 @@
     }
 
     .container {
-      max-width: 850px;
+      max-width: 800px;
       margin: 3rem auto;
       padding: 0 1.5rem;
     }
 
-    h1, h2 {
-      color: #002145;
-    }
-
     h1 {
       font-size: 2.2rem;
-      margin-bottom: 1.5rem;
+      text-align: center;
+      color: #002145;
+      margin-bottom: 2rem;
     }
 
     h2 {
-      font-size: 1.4rem;
-      margin-top: 2.2rem;
+      font-size: 1.2rem;
+      margin-top: 2rem;
+      color: #002145;
       border-left: 4px solid #002145;
       padding-left: 10px;
-    }
-
-    ul, ol {
-      padding-left: 1.3rem;
     }
 
     .box {
       background-color: #ffffff;
       padding: 1.2rem 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      margin-top: 1.5rem;
-    }
-
-    .resources a {
-      color: #002145;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .resources a:hover {
-      text-decoration: underline;
-    }
-
-    .resources {
-      margin-top: 2.5rem;
-      padding: 1.2rem 1.5rem;
-      background-color: #e0edf5;
       border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      margin-bottom: 1.5rem;
+    }
+
+    ul, ol {
+      padding-left: 1.2rem;
     }
 
     li {
       margin-bottom: 0.5rem;
+    }
+
+    .resources {
+      background-color: #e0edf5;
+      border-radius: 10px;
+      padding: 1rem 1.2rem;
+      margin-top: 2rem;
+    }
+
+    .resources a {
+      color: #002145;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .resources a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -76,67 +75,39 @@
     <div class="box">
       <h2>Why This Matters to You</h2>
       <p>
-        In Canada, police and government agencies collect personal data to prevent crime and manage public safety.
-        However, this can affect your privacy, especially if you’re a newcomer unfamiliar with Canadian laws.
-        Below is what you need to know to protect yourself.
+        In Canada, police and government agencies collect personal data for public safety. As a newcomer, it's important to understand what is collected, how it’s used, and how to protect your privacy.
       </p>
     </div>
 
     <div class="box">
-      <h2>How Your Data Is Collected and Used</h2>
-      <p><strong>1. Biometrics (Fingerprints and Photos)</strong></p>
+      <h2>How Your Data Is Collected</h2>
       <ul>
-        <li>Collected during immigration, refugee, or visa applications</li>
-        <li>Stored by RCMP and IRCC</li>
-        <li><strong>Kept for:</strong>
-          <ul>
-            <li>Minimum 15 years</li>
-            <li>Until age 100 if you become a permanent resident, claim refugee status, or face deportation</li>
-          </ul>
-        </li>
-      </ul>
-
-      <p><strong>2. Social Media Monitoring (SOCMINT)</strong></p>
-      <ul>
-        <li>Police may review public posts (even if your profile is “private”)</li>
-        <li>Examples of exposed data:
-          <ul>
-            <li>Friends lists on Facebook</li>
-            <li>Location tags on X/Twitter</li>
-            <li>Photos you’re tagged in by others</li>
-          </ul>
-        </li>
+        <li><strong>Biometrics:</strong> Fingerprints and photos are collected during immigration and may be stored for 15+ years or until age 100.</li>
+        <li><strong>Social Media:</strong> Police can access public content like friends lists, tags, and locations—even if your profile is set to private.</li>
       </ul>
     </div>
 
     <div class="box">
-      <h2>Privacy Risks You Should Know</h2>
+      <h2>Privacy Risks</h2>
       <ol>
-        <li><strong>Social Media Settings Are Tricky:</strong> Privacy rules change often, and platforms push public sharing.</li>
-        <li><strong>“Public” Posts Aren’t Always Fair Game:</strong> Canadian law may still recognize an expectation of privacy.</li>
+        <li><strong>Changing Settings:</strong> Social platforms may change privacy rules without notice.</li>
+        <li><strong>Public ≠ Free Use:</strong> Even public posts may still be protected by privacy expectations in Canadian law.</li>
       </ol>
     </div>
 
     <div class="box">
       <h2>How to Protect Yourself</h2>
       <ul>
-        <li><strong>Biometrics:</strong> Ask why your data is needed and how it will be used.</li>
-        <li><strong>Social Media:</strong>
-          <ul>
-            <li>Lock profiles: Hide friends lists and turn off location tags.</li>
-            <li>Review tagged content and untag yourself.</li>
-            <li>Avoid posting sensitive details like job plans or travel dates.</li>
-          </ul>
-        </li>
-        <li><strong>Stay Informed:</strong> Learn about PIBs — government databases that track data collection and sharing.</li>
+        <li><strong>Biometrics:</strong> Ask how and why your data will be used.</li>
+        <li><strong>Social Media:</strong> Hide friends lists, turn off location tags, untag photos, and avoid sharing sensitive info.</li>
+        <li><strong>Learn:</strong> Understand PIBs—government databases tracking personal data use.</li>
       </ul>
     </div>
 
     <div class="box">
       <h2>Key Takeaway</h2>
       <p>
-        Your data — including biometrics and social media activity — may be used in ways you didn’t expect.
-        Knowing your rights and securing your information helps you live more safely and confidently in Canada.
+        Your data can be used in ways you don’t expect. Knowing your rights helps you stay safer and more informed in Canada.
       </p>
     </div>
 
@@ -146,14 +117,12 @@
         <li>
           <a href="https://www.canada.ca/en/immigration-refugees-citizenship/corporate/transparency/access-information-privacy/info-source/personal-information-banks.html" target="_blank">
             Info Source: Personal Information Banks
-          </a><br/>
-          Explains how Canadian government agencies store and use data like biometrics.
+          </a> – Learn how Canada stores and uses biometric data.
         </li>
         <li>
           <a href="https://doi-org.myaccess.library.utoronto.ca/10.1093/ijlit/eaw007" target="_blank">
-            International Journal of Law and Information Technology
-          </a><br/>
-          Discusses how law enforcement uses public social media data, even when profiles are set to private.
+            Journal Article on Social Media & Law
+          </a> – How law enforcement uses public data online.
         </li>
       </ul>
     </div>
